# worklog

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: add.md  backfill.md  doctor.md  project_add.md  project_remove.md  projects.md  push.md  remove.md  retitle.md  show.md  slack-inbox.md  slack-update.md  sync-calendar.md
commands.disabled/: slack-inbox.md
docs/: ARCHITECTURE.md  INTEGRATIONS.md  READ-AI-SETUP.md  README.md  WORKFLOW.md
hooks/: log_session.py
lib/: db.py  git.py  transcripts.py
tests/: README.md  conftest.py  test_db.py  test_git.py  test_hook.py  test_transcripts.py
